--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "phantomjs-prebuilt": "^2.1.6",
     "babel-plugin-istanbul": "^2.0.1",
     "karma-webpack": "^1.7.0",
-    "webpack": "2.1.0-beta",
+    "webpack": "2.1.0-beta.19",
     "html-webpack-plugin": "^2.9.0",
     "style-loader": "^0.13.0",
     "css-loader": "^0.23.1",
