--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "build": "gulp",
     "serve": "gulp serve",
     "serve:dist": "gulp serve:dist",
+    "start": "npm run serve",
     "test": "gulp test",
     "test:auto": "gulp test:auto"
   },
