--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,10 @@
 machine:
+  services:
+    - docker    
   node:
     version: 6.6.0
+
+
+dependencies:
+  post:
+    - docker build -t $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/nodetodo:$CIRCLE_SHA1 .
