--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,9 @@ machine:
   node:
     version: 6.6.0
 
-dependencies:
+test:
+  override:
+    - npm test
   post:
     - docker build -t $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/nodetodo:$CIRCLE_SHA1 .
 
